<?xml version="1.0"?>
<package>
  <name>serial_parse_publish</name>
  <version>0.1.0</version>
  <description>Comunicate with DE LiDAR</description>

  <maintainer email="wenquan@benewake.com">wenquan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
